Complete Initial Model

--- a/package.json
+++ b/package.json
@@ -1,4 +1,21 @@
 {
+  "name": "financialappback",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/The-Third-Team/React-FinancialApp-BackEnd.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/The-Third-Team/React-FinancialApp-BackEnd/issues"
+  },
+  "homepage": "https://github.com/The-Third-Team/React-FinancialApp-BackEnd#readme"
+  ,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
