--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/The-Third-Team/React-FinancialApp-BackEnd.git"
@@ -14,16 +13,21 @@
   "bugs": {
     "url": "https://github.com/The-Third-Team/React-FinancialApp-BackEnd/issues"
   },
-  "homepage": "https://github.com/The-Third-Team/React-FinancialApp-BackEnd#readme"
-  ,
+  "homepage": "https://github.com/The-Third-Team/React-FinancialApp-BackEnd#readme",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "build": "npm install && npx sequelize-cli db:migrate"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.2",
     "sequelize": "^6.32.1"
   }
