--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "pg": "^8.11.2",
+    "react-moment": "^1.1.3",
     "sequelize": "^6.32.1"
   }
 }
